Fix cropped loading and login screen

--- a/src/app/templates/auth/Auth.scss
+++ b/src/app/templates/auth/Auth.scss
@@ -1,6 +1,6 @@
 .auth__base {
   --pattern-size: 48px;
-  min-height: 100vh;
+  min-height: 100%;
   background-color: var(--bg-surface-low);
 
   background-image: radial-gradient(rgba(0, 0, 0, 6%) 2px, rgba(0, 0, 0, 0%) 2px);
