--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -18,7 +18,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 
   display: flex;
   flex-direction: column;
